feat(WorkbuddyInfoService): 优化配置文件路径解析逻辑，支持 Docker 环境变量覆盖